--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "lovekesh9896",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon index.js"
+	},
+	"author": "lovekesh9896",
+	"license": "ISC",
+	"dependencies": {
+		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"mongoose": "^5.12.14",
+		"nodemon": "^2.0.7",
+		"passport": "^0.4.1",
+		"passport-jwt": "^4.0.0"
+	}
 }
